--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button id="popup" class="btn-select">Select</button>
     </div>
     <p id="message"></p>
+    <p id="draw"></p>
     <div class="board"></div>
     <div class="footer">
         <button onclick="setColor('black')">Black</button>
